--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
+    <script src="http://localhost:8081/livereload.js"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
